use logo as home link instead of text

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -35,3 +35,13 @@
 .nav-right {
   float: right;
 }
+
+.logo img{
+  height: 3rem;
+  padding: 5px 10px;
+  margin-top: 5px;
+}
+
+.logo{
+  height: 3rem;
+}
