--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -10,7 +10,7 @@
   margin: 0 0 30px;
   background-color: #f4f4f4;
   overflow: hidden;
-  height: 65px;
+  /* height: 65px; */
   box-shadow: 0px 0px 9px 2px rgba(132, 132, 132, 0.38);
 }
 
@@ -40,11 +40,7 @@
 }
 
 .logo img{
-  height: 3rem;
+  height: 45px;
   padding: 5px 10px;
   margin-top: 5px;
-}
-
-.logo{
-  height: 3rem;
 }
