--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -12,6 +12,9 @@
   overflow: hidden;
   /* height: 65px; */
   box-shadow: 0px 0px 9px 2px rgba(132, 132, 132, 0.38);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 .nav-link {
