--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -106,6 +106,20 @@ Form Treatment
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
 }
 
+.editPanel {
+  box-sizing: border-box;
+  width: 900px;
+  max-width: 100%;
+  padding: 25px;
+  margin: 0 auto 20px;
+  background-color: #efefef;
+  border-radius: 3px;
+  box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
+}
+
+
+
+
 input {
   margin: 5px;
   margin-bottom: 10px;
