--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -23,6 +23,8 @@ Container
 
 .container {
   padding: 20px;
+  max-width: 60rem;
+  margin: auto;
 }
 
 /* --------------------------------------------------------------------------------
