--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -120,10 +120,26 @@ Form Treatment
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
 }
 
-
-
-
 input {
   margin: 5px;
   margin-bottom: 10px;
+}
+
+table {
+  border:none;
+  border-collapse: collapse;
+}
+
+table td {
+
+  padding-right: 15px;
+
+}
+
+table td:first-child {
+  border-left: none;
+}
+
+table td:last-child {
+  border-right: none;
 }
