--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -145,3 +145,16 @@ table td:first-child {
 table td:last-child {
   border-right: none;
 }
+
+.slate{
+  background-color: #425564;
+  padding: 1rem;
+}
+
+.paper{
+  box-shadow: 1px 2px 6px 0px rgba(163, 163, 163, 0.83);
+  padding: 1rem;
+  background-color: rgb(245, 245, 244);
+  width: max-content;
+}
+
