create horizontal menu styles

--- a/src/components/AdminPage/AdminPage.css
+++ b/src/components/AdminPage/AdminPage.css
@@ -1,4 +1,7 @@
-/* .adminButtonClass {
-    margin-left: 5px;
-} */
+.btn-menu-horizontal{
+    height: 100%;
+}
 
+.menu-horizontal{
+    height: 2rem;
+}
