move tasklist inside project div

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -152,6 +152,19 @@ table td:last-child {
 
 
 /* --------------------------------------------------------------------------------
+Menus
+-------------------------------------------------------------------------------- */
+
+.menu-hz-btn{
+  height: 100%;
+}
+
+.menu-hz{
+  height: 2rem;
+}
+
+
+/* --------------------------------------------------------------------------------
 General Theme
 -------------------------------------------------------------------------------- */
 
