--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -8,10 +8,13 @@
 
 .nav {
   margin: 0 0 30px;
-  background-color: #f4f4f4;
+  /* old background */
+  /* background-color: #f4f4f4; */
+  /* todo - refine this color. It doesn't quite look right */
+  background-color: #e4e0e0;
   overflow: hidden;
   /* height: 65px; */
-  box-shadow: 0px 0px 9px 2px rgba(132, 132, 132, 0.38);
+  box-shadow: 0px 0px 9px 2px #f37224;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -23,7 +26,9 @@
   font: menu;
   float: left;
   color: #f37224;
-  background-color: #f4f4f4;
+  /* old background */
+  /* background-color: #f4f4f4; */
+  background-color: #e4e0e0;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
