--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -11,7 +11,7 @@ body {
   font-family: 'Open Sans', Arial, Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
   color: #f8f8f8;
-  background-color: rgb(19, 19, 19);
+  background-color: #3b3b3b;
 }
 
 img {
@@ -40,7 +40,7 @@ Button
   border-width: 1px 1px 3px;
   border-radius: 4px;
   color: #f8f8f8;
-  background-color: #000000;
+  background-color: #2b2b2b;
   font-size: 1.1rem;
   outline: 0;
   cursor: pointer;
@@ -186,12 +186,36 @@ General Theme
   padding: 1rem;
 }
 
+/* .paper{
+  box-shadow: 1px 2px 6px 0px rgba(163, 163, 163, 0.83);
+  padding: 1rem;
+  width: max-content;
+} */
+
 .paper{
   box-shadow: 1px 2px 6px 0px rgba(163, 163, 163, 0.83);
   padding: 1rem;
   color: #efefef;
-  background-color: #3b3b3b;
+  background-color: rgb(245, 245, 244);
   width: max-content;
+}
+
+.metal{
+  /* box-shadow: 1px 2px 6px 0px rgba(163, 163, 163, 0.83); */
+  padding: 1rem;
+  color: #efefef;
+  background-color: #3b3b3b;
+  /* width: max-content; */
+}
+
+.night{
+  padding: 1rem;
+  color: #efefef;
+  background-color: #131313;
+}
+
+.rounded{
+  border-radius: .5rem;
 }
 
 .notched{
