--- a/src/components/Project/AdminTaskList/AdminTaskList.css
+++ b/src/components/Project/AdminTaskList/AdminTaskList.css
@@ -1,4 +1,4 @@
 .container-task{
-    border-bottom: black 1px solid;
-    padding-bottom: 1rem;
+    border: black 1px solid;
+    margin: 1rem;
 }
