render same task page for everyone

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -91,6 +91,12 @@ Button
   color: #242424;
 }
 
+.btn-delete{
+  float: right;
+  background-color: #b80b0b;
+}
+
+
 /* --------------------------------------------------------------------------------
 Alert
 -------------------------------------------------------------------------------- */
