fix formPanel width

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -125,7 +125,8 @@ Form Treatment
 
 .formPanel {
   box-sizing: border-box;
-  width: 400px;
+  /* width: 400px; */
+  width: max-content;
   max-width: 100%;
   padding: 25px;
   margin: 0 auto 20px;
