--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -129,7 +129,7 @@ Form Treatment
   width: max-content;
   max-width: 100%;
   padding: 25px;
-  margin: 0 auto 20px;
+  margin: 1rem auto;
   background-color: #525252;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
