--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -151,6 +151,11 @@ input {
   margin-bottom: 10px;
 }
 
+
+/* --------------------------------------------------------------------------------
+Menus
+-------------------------------------------------------------------------------- */
+
 table {
   margin: auto;
   border:none;
