add archive button

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -288,6 +288,10 @@ General Theme
   border-bottom: #f56f34 1px solid;
 }
 
+.flex{
+  display: flex;
+}
+
 
 /* --------------------------------------------------------------------------------
 Headers
